--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 <classpathentry kind="src" path="verifier"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+    <classpathentry kind="var" path="BP_CORE_HOME/core.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
